refactor(skills): backup before refactor structure
need backup files before huge structure refactoring

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </div>
 
         <div class="skill-progress-grid">
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__js" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__js" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">70</div>
@@ -105,12 +105,17 @@
                     </svg>
                 </div>
 
+                <div id="skill-progress-bar__js" class="progress-bar hide-progress-bar">
+                    <span class="progress-bar-outer"></span>
+                    <span class="progress-bar-inner"></span>
+                </div>
+
                 <div class="skill-name">JavaScript</div>
             </div>
 
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__react" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__react" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">20</div>
@@ -127,8 +132,8 @@
                 <div class="skill-name">React</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__html" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__html" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">75</div>
@@ -146,8 +151,8 @@
             </div>
 
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__rn" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__rn" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -164,8 +169,8 @@
                 <div class="skill-name">React Native</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__css" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__css" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -182,8 +187,8 @@
                 <div class="skill-name">CSS</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__json" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__json" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -200,8 +205,8 @@
                 <div class="skill-name">JSON</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__sass" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__sass" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -218,8 +223,8 @@
                 <div class="skill-name">SASS</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__vs" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__vs" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -236,8 +241,8 @@
                 <div class="skill-name">VS Code</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__ts" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__ts" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -254,8 +259,8 @@
                 <div class="skill-name">TypeScript</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__bem" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__bem" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -272,8 +277,8 @@
                 <div class="skill-name">BEM</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__git" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__git" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -290,8 +295,8 @@
                 <div class="skill-name">GIT</div>
             </div>
 
-            <div class="skill-flex-container show-on-scroll">
-                <div id="skill-progress__figma" class="progress">
+            <div class="progress skill-flex-container show-on-scroll">
+                <div id="skill-progress__figma" class="progress-circle hide-progress-circle">
                     <div class="progress-outer">
                         <div class="progress-inner">
                             <div class="progress-number">25</div>
@@ -314,8 +319,8 @@
             Получить точную "картину" возможно в процессе собеседования.
         </p>
 
-        <div class="languages skill-flex-container show-on-scroll">
-            <div id="skill-progress__en" class="progress">
+        <div class="progress skill-flex-container languages show-on-scroll">
+            <div id="skill-progress__en" class="progress-circle hide-progress-circle">
                 <div class="progress-outer">
                     <div class="progress-inner">
                         <div class="progress-number">70</div>
