feat(projects): add basic structure

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     </header>
 
+    <!-- Start skills section -->
     <section class="skills container--px">
         <div class="title show-on-scroll">
             <div class="title__left">
@@ -480,8 +481,59 @@
         </div>
 
     </section>
-
     <!-- End skills section -->
+
+    <!-- Start Projects section -->
+    <section class="projects container--px">
+        <div class="title show-on-scroll">
+            <div class="title__left">
+                <div class="title__circle"></div>
+                <div class="title__line"></div>
+            </div>
+            <div class="bubble bubble--title"><h2>Проекты</h2></div>
+            <div class="title__right">
+                <div class="title__line"></div>
+                <div class="title__circle"></div>
+            </div>
+        </div>
+
+        <div class="projects-flex-container">
+
+            <div id="projects-slider" class="projects-slider">
+                <!-- <div class="projects-slider__crop"> -->
+                    <a href="#" class="slide-link">
+                        <div class="project project-01"></div>
+                    </a>
+                    <a href="#" class="slide-link">
+                        <div class="project project-02"></div>
+                    </a>
+                    <a href="#" class="slide-link">
+                        <div class="project project-03"></div>
+                    </a>
+                    <a href="#" class="slide-link">
+                        <div class="project project-04"></div>
+                    </a>
+                    <a href="#" class="slide-link">
+                        <div class="project project-05"></div>
+                    </a>
+                    <a href="#" class="slide-link">
+                        <div class="project project-06"></div>
+                    </a>
+                    <a href="#" class="slide-link">
+                        <div class="project project-07"></div>
+                    </a>
+                <!-- </div> -->
+            </div>
+
+            <div class="show-on-scroll">
+                <a href="#" class="see-all-projects cta">Все проекты</a>
+            </div>
+        </div>
+
+
+
+    </section>
+    <!-- End Projects section -->
 </div>
 </body>
 </html>
