chore(projects): improve projects layout
better alingment and positioning

--- a/index.html
+++ b/index.html
@@ -497,32 +497,34 @@
             </div>
         </div>
 
+        
         <div class="projects-flex-container">
-
-            <div id="projects-slider" class="projects-slider">
-                <!-- <div class="projects-slider__crop"> -->
-                    <a href="#" class="slide-link">
-                        <div class="project project-01"></div>
-                    </a>
-                    <a href="#" class="slide-link">
-                        <div class="project project-02"></div>
-                    </a>
-                    <a href="#" class="slide-link">
-                        <div class="project project-03"></div>
-                    </a>
-                    <a href="#" class="slide-link">
-                        <div class="project project-04"></div>
-                    </a>
-                    <a href="#" class="slide-link">
-                        <div class="project project-05"></div>
-                    </a>
-                    <a href="#" class="slide-link">
-                        <div class="project project-06"></div>
-                    </a>
-                    <a href="#" class="slide-link">
-                        <div class="project project-07"></div>
-                    </a>
-                <!-- </div> -->
+            <div class="projects-container-border">
+                <div id="projects-slider" class="projects-slider">
+                    <!-- <div class="projects-slider__crop"> -->
+                        <a href="#" class="slide-link">
+                            <div class="project project-01"></div>
+                        </a>
+                        <a href="#" class="slide-link">
+                            <div class="project project-02"></div>
+                        </a>
+                        <a href="#" class="slide-link">
+                            <div class="project project-03"></div>
+                        </a>
+                        <a href="#" class="slide-link">
+                            <div class="project project-04"></div>
+                        </a>
+                        <a href="#" class="slide-link">
+                            <div class="project project-05"></div>
+                        </a>
+                        <a href="#" class="slide-link">
+                            <div class="project project-06"></div>
+                        </a>
+                        <a href="#" class="slide-link">
+                            <div class="project project-07"></div>
+                        </a>
+                    <!-- </div> -->
+                </div>
             </div>
 
             <div class="show-on-scroll">
