feat(projects): basic carousel move left/right

--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
         </div>
 
         
-        <div class="projects-flex-container">
+        <div id="projects-slider" class="projects-flex-container">
             <div class="projects-container-border">
-                <div id="projects-slider" class="projects-slider">
+                <div class="projects-slides">
                     <!-- <div class="projects-slider__crop"> -->
                         <a href="#" class="slide-link">
                             <div class="project project-01"></div>
@@ -524,6 +524,11 @@
                             <div class="project project-07"></div>
                         </a>
                     <!-- </div> -->
+                </div>
+
+                <div class="slider-navigation">
+                    <div class="slider-prev">&lt;</div>
+                    <div class="slider-next">&gt;</div>
                 </div>
             </div>
 
