--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/style.css">
     <title>Front End | V I | П</title>
-    <script src="assets\js\script.js" async></script>
+    <!-- <script src="assets\js\script.js" async></script> -->
 </head>
 
 <body>
@@ -499,9 +499,8 @@
 
         
         <div id="projects-slider" class="projects-flex-container">
-            <div class="projects-container-border">
+            <div class="projects-container-border show-on-scroll">
                 <div class="projects-slides">
-                    <!-- <div class="projects-slider__crop"> -->
                         <a href="#" class="slide-link">
                             <div class="project project-01"></div>
                         </a>
@@ -523,7 +522,6 @@
                         <a href="#" class="slide-link">
                             <div class="project project-07"></div>
                         </a>
-                    <!-- </div> -->
                 </div>
 
                 <div class="slider-navigation">
@@ -542,5 +540,7 @@
     </section>
     <!-- End Projects section -->
 </div>
+
+<script src="assets\js\script.js" ></script>
 </body>
 </html>
