fix(projects): hover animation and responsive
add responsive designt to slides on different screen sizes,
add scale up animation to slide on hover.

--- a/index.html
+++ b/index.html
@@ -524,10 +524,10 @@
                         </a>
                 </div>
 
-                <div class="slider-navigation">
+                <!-- <div class="slider-navigation"> -->
                     <div class="slider-prev">&lt;</div>
                     <div class="slider-next">&gt;</div>
-                </div>
+                <!-- </div> -->
             </div>
 
             <div class="show-on-scroll">
