--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         </div>
 
         <div class="experience-grid">
-            <div class="job-period show-on-scroll">
+            <div id="current-job" class="job-period show-on-scroll">
                 <div class="job-period__total text bold">3 года 8 месяцев</div>
                 <div class="job-period__since text">Март 2020 — по настоящее время</div>
             </div>
