feat(education): add education section

--- a/index.html
+++ b/index.html
@@ -658,6 +658,33 @@
 
     </section>
     <!-- End Experience section -->
+
+    <!-- Start Education section -->
+    <section class="education container--px">
+        <div class="title show-on-scroll">
+            <div class="title__left">
+                <div class="title__circle"></div>
+                <div class="title__line"></div>
+            </div>
+            <div class="bubble bubble--title"><h2>Образование</h2></div>
+            <div class="title__right">
+                <div class="title__line"></div>
+                <div class="title__circle"></div>
+            </div>
+        </div>
+
+        <div class="education-wrapper show-on-scroll">
+            <div class="education-years text bold">2005-2010</div>
+            <div class="education-type text">Высшее</div>
+            <div class="education-container">
+                <div class="education-specialization text bold">Прикладная информатика в экономике</div>
+                <div class="education-univercity text italic">СПБГИЭУ "ИНЖЭКОН" г.Санкт-Петербург</div>
+            </div>
+            
+        </div>
+            
+    </section>
+    <!-- End Education section -->
 </div>
 
 <script src="assets\js\script.js" ></script>
