--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
             </div>
         </div>
 
-        <div class="experience-grid">
+        <div class="experience-grid container--my">
             <div class="experience-flex show-on-scroll">
                 <div id="current-job" class="job-period">
                     <div class="job-period__total text bold">3 года 8 месяцев</div>
@@ -673,7 +673,7 @@
             </div>
         </div>
 
-        <div class="education-wrapper show-on-scroll">
+        <div class="education-wrapper container--my ">
             <div class="education-years text bold">2005-2010</div>
             <div class="education-type text">Высшее</div>
             <div class="education-container">
@@ -703,7 +703,7 @@
             </div>
         </div>
 
-        <div class="text">
+        <div class="text container--my">
             Если с портфолио и резюме всё понятно, но хочется узнать что я за человек, то переходи на страницу <a href="#" class="links">“Биография”</a>.
         </div>
 
